# tsteeper

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  process_licenses.sh  update_cache_windows.sh
.github/workflows/: build.yml  build_debug.yml  conan_update.yml
packaging/: CMakeLists.txt
src/: CMakeLists.txt  Context.cpp  Context.h  TurtleBrowser_de_AT.ts  TurtleBrowser_de_DE.ts  TurtleBrowser_ja.ts  deployapp.cmake.in  main.cpp  qt.conf.in
src/licenses/: LicenseCategory.h  LicenseFilter.cpp  LicenseFilter.h  LicenseModel.cpp  LicenseModel.h  LicenseReader.cpp  LicenseReader.h
src/resources/: linux_licenses.qrc  qtquickcontrols2.conf  resources.qrc  windows_licenses.qrc
src/resources/licenses/linux/: linux_licenses.qrc
src/resources/licenses/windows/: windows_licenses.qrc
src/resources/qml/: AddressBackground.qml  AddressBar.qml  BrowserMenu.qml  FramelessTopLevelWindow.qml  LicenseNavigator.qml  LicensePage.qml  NavigationButton.qml  StyledMenu.qml  TabToolbar.qml  TopLevelWindow.qml  WebPage.qml  addresses.js  icons.js  loading.js  main.qml  theme.js  url.js
